--- a/rhi/BUILD.bazel
+++ b/rhi/BUILD.bazel
@@ -10,6 +10,7 @@ cc_library(
     ],
     deps = [
         "@volk//:volk",
+        "@glfw//:glfw",
         "//core:core",
     ],
     visibility = ["//visibility:public"],
