feat: spirv reflection, programmable stage of graphics pipeline, api change

--- a/rhi/BUILD.bazel
+++ b/rhi/BUILD.bazel
@@ -6,16 +6,19 @@ cc_library(
         "context.h",
         "command_buffer.h",
         "pipeline.h",
+        "utils.h",
     ],
     srcs = [
         "context.cpp",
         "command_buffer.cpp",
         "pipeline.cpp",
+        "utils.cpp",
     ],
     deps = [
         "@volk//:volk",
         "@glfw//:glfw",
         "@vma//:vma",
+        "@spirv_reflect//:spirv_reflect",
         "//core:core",
     ],
     visibility = ["//visibility:public"],
