--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -3,5 +3,6 @@ load("@rules_python//python:pip.bzl", "compile_pip_requirements")
 compile_pip_requirements(
     name = "requirements",
     src = "requirements.in",
-    requirements_txt = "requirements.txt",
+    requirements_txt = "requirements_lock.txt",
+    requirements_windows = "requirements_windows.txt",
 )
