--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -22,7 +22,8 @@ pip = use_extension(
 pip.parse(
     hub_name = "pip",
     python_version = "3.10",
-    requirements_lock = "//:requirements.txt",
+    requirements_lock = "//:requirements_lock.txt",
+    requirements_windows = "//:requirements_windows.txt",
 )
 
 use_repo(pip, "pip")
