--- a/tests/math/BUILD.bazel
+++ b/tests/math/BUILD.bazel
@@ -12,3 +12,16 @@ cc_test(
         "//math:math",
     ],
 )
+
+cc_test(
+    name = "test_vec3",
+    size = "small",
+    srcs = [
+        "test_vec3.cpp",
+    ],
+    deps = [
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
+        "//math:math",
+    ],
+)
