feat: sin and cos functions + tests

--- a/math/BUILD.bazel
+++ b/math/BUILD.bazel
@@ -4,6 +4,10 @@ cc_library(
     name = "math",
     hdrs = [
         "vec.h",
+        "functions.h",
+    ],
+    srcs = [
+        "functions.cpp",
     ],
     deps = [
         "//core:assert",
