feat: mat4 and basic mat4 operations

--- a/math/BUILD.bazel
+++ b/math/BUILD.bazel
@@ -4,9 +4,11 @@ cc_library(
     name = "math",
     hdrs = [
         "vec.h",
+        "mat.h",
         "functions.h",
     ],
     srcs = [
+        "mat.cpp",
         "functions.cpp",
     ],
     deps = [
