feat: bazel copy_files_to_directory rule

--- a/demos/triangle/BUILD.bazel
+++ b/demos/triangle/BUILD.bazel
@@ -1,17 +1,14 @@
 load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
-load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
+load("@helios//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")
 load("@helios//scripts/bazel/rules:glslang.bzl", "glsl_shader")
 
-copy_file(
-    name = "copy_vulkan_layer_manifest",
-    src = "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation_json",
-    out = "VkLayer_khronos_validation.json",
-)
-
-copy_file(
-    name = "copy_vulkan_layer",
-    src = "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation",
-    out = "VK_LAYER_KHRONOS_validation.dll",
+copy_files_to_directory(
+    name = "copy_vulkan_validation_layer",
+    srcs = [
+        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation_json",
+        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation",
+    ],
+    output_directory = ".",
 )
 
 config_setting(
@@ -46,8 +43,7 @@ cc_binary(
         ":release_build": [
         ],
         "//conditions:default": [
-            ":copy_vulkan_layer_manifest",
-            ":copy_vulkan_layer",
+            ":copy_vulkan_validation_layer",
         ],
     })
 )
