--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -125,6 +125,14 @@ external_git_repository.base(
 )
 use_repo(external_git_repository, "optparse")
 
+external_git_repository.base(
+    name = "stb",
+    build_file = "//scripts/bazel/target:BUILD.stb.bazel",
+    commit = "f0569113c93ad095470c54bf34a17b36646bbbb5",
+    remote = "https://github.com/nothings/stb.git",
+)
+use_repo(external_git_repository, "stb")
+
 external_data.base(
     name = "cube_scene",
     url = "https://casual-effects.com/g3d/data10/common/model/cube/cube.zip",
