--- a/rhi/BUILD.bazel
+++ b/rhi/BUILD.bazel
@@ -7,6 +7,7 @@ cc_library(
         "command_buffer.h",
         "pipeline.h",
         "buffer.h",
+        "image.h",
         "utils.h",
     ],
     srcs = [
@@ -14,6 +15,7 @@ cc_library(
         "command_buffer.cpp",
         "pipeline.cpp",
         "buffer.cpp",
+        "image.cpp",
         "utils.cpp",
     ],
     deps = [
