refactor: decoupled rhi from glfw

--- a/demos/cubes/BUILD.bazel
+++ b/demos/cubes/BUILD.bazel
@@ -42,6 +42,7 @@ cc_binary(
         "main.cpp",
     ],
     deps = [
+        "//src/platform:window",
         "//src/rhi:context",
         "//demos/common:simple_camera_fps",
     ],
