refactor: make include paths prettier

--- a/src/math/BUILD.bazel
+++ b/src/math/BUILD.bazel
@@ -11,6 +11,7 @@ cc_library(
         "mat.cpp",
         "functions.cpp",
     ],
+    includes = [".."],
     deps = [
         "//src/core:assert",
     ],
