--- a/src/rhi/BUILD.bazel
+++ b/src/rhi/BUILD.bazel
@@ -22,6 +22,7 @@ cc_library(
         "image.cpp",
         "utils.cpp",
     ],
+    includes = [".."],
     deps = [
         "@volk//:volk",
         "@vma//:vma",
