feat: min, max, +inf, -inf for f32 and invsqrt

--- a/src/math/benchmark/BUILD.bazel
+++ b/src/math/benchmark/BUILD.bazel
@@ -6,8 +6,8 @@ cc_binary(
         "benchmark_functions.cpp",
     ],
     deps = [
-        "//core:clock",
-        "//math:math",
+        "//src/core:clock",
+        "//src/math:math",
     ],
 )
 
