--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -133,6 +133,14 @@ external_git_repository.base(
 )
 use_repo(external_git_repository, "stb")
 
+external_git_repository.base(
+    name = "tinyobjloader",
+    build_file = "//scripts/bazel/target:BUILD.tinyobjloader.bazel",
+    commit = "3bb554cf74428d7db13418b4aca1b9752a1d2be8",
+    remote = "https://github.com/tinyobjloader/tinyobjloader.git",
+)
+use_repo(external_git_repository, "tinyobjloader")
+
 external_data.base(
     name = "cube_scene",
     url = "https://casual-effects.com/g3d/data10/common/model/cube/cube.zip",
