refactor: read file api to use string8

--- a/src/core/BUILD.bazel
+++ b/src/core/BUILD.bazel
@@ -119,6 +119,7 @@ cc_library(
     ],
     deps = [
         ":string8",
+        ":thread_context",
     ],
     visibility = ["//visibility:public"],
 )
