refactor: moved image loading to assets

--- a/src/assets/BUILD.bazel
+++ b/src/assets/BUILD.bazel
@@ -16,6 +16,22 @@ cc_library(
 )
 
 cc_library(
+    name = "import_image",
+    hdrs = [
+        "import_image.h",
+    ],
+    srcs = [
+        "import_image.cpp",
+    ],
+    includes = [".."],
+    deps = [
+        "//src/rhi:context",
+        "@stb//:stb_image",
+    ],
+    visibility = ["//visibility:public"],
+)
+
+cc_library(
     name = "import",
     deps = [
         ":import_obj",
