--- a/demos/cubes/BUILD.bazel
+++ b/demos/cubes/BUILD.bazel
@@ -44,6 +44,7 @@ cc_binary(
     deps = [
         "//src/platform:window",
         "//src/rhi:context",
+        "//src/assets:import_image",
         "//demos/common:simple_camera_fps",
     ],
     data = [
