--- a/tests/core/BUILD.bazel
+++ b/tests/core/BUILD.bazel
@@ -12,3 +12,16 @@ cc_test(
         "//src/core:string8",
     ],
 )
+
+cc_test(
+    name = "test_filesystem",
+    size = "small",
+    srcs = [
+        "test_filesystem.cpp",
+    ],
+    deps = [
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
+        "//src/core:filesystem",
+    ],
+)
