feat: normalizing path on creation

--- a/src/core/BUILD.bazel
+++ b/src/core/BUILD.bazel
@@ -92,6 +92,11 @@ cc_library(
         ":string8",
         ":thread_context",
     ],
+    linkopts = select({
+	    "@platforms//os:windows": [
+            "-DEFAULTLIB:PathCch.lib",
+        ],
+    }),
     visibility = ["//visibility:public"],
 )
 
