--- a/src/rhi/BUILD.bazel
+++ b/src/rhi/BUILD.bazel
@@ -3,6 +3,7 @@ load("@rules_cc//cc:defs.bzl", "cc_library")
 cc_library(
     name = "context",
     hdrs = [
+        "allocation_callbacks.h",
         "context.h",
         "device.h",
         "surface.h",
@@ -14,6 +15,7 @@ cc_library(
         "utils.h",
     ],
     srcs = [
+        "allocation_callbacks.cpp",
         "context.cpp",
         "device.cpp",
         "surface.cpp",
