feat: split buffer in types

--- a/src/rhi/BUILD.bazel
+++ b/src/rhi/BUILD.bazel
@@ -7,11 +7,14 @@ cc_library(
         "context.h",
         "device.h",
         "surface.h",
+        "index_buffer.h",
+        "storage_buffer.h",
         "command_buffer.h",
+        "uniform_buffer.h",
         "pipeline.h",
-        "buffer.h",
         "texture.h",
         "descriptor.h",
+        "vma.h",
         "utils.h",
     ],
     srcs = [
@@ -19,9 +22,11 @@ cc_library(
         "context.cpp",
         "device.cpp",
         "surface.cpp",
+        "index_buffer.cpp",
+        "storage_buffer.cpp",
         "command_buffer.cpp",
+        "uniform_buffer.cpp",
         "pipeline.cpp",
-        "buffer.cpp",
         "texture.cpp",
         "descriptor.cpp",
         "utils.cpp",
