fix: texture api

--- a/demos/common/BUILD.bazel
+++ b/demos/common/BUILD.bazel
@@ -27,6 +27,7 @@ cc_library(
         "//src/math:math",
         "//src/assets:import_gltf",
         "//src/assets:import_image",
+        "//src/rhi:context",
     ],
     visibility = ["//visibility:public"],
 )
