feat: indirect draw commands buffer api

--- a/src/rhi/BUILD.bazel
+++ b/src/rhi/BUILD.bazel
@@ -11,6 +11,7 @@ cc_library(
         "storage_buffer.h",
         "command_buffer.h",
         "uniform_buffer.h",
+        "indirect_draw_buffer.h",
         "pipeline.h",
         "texture.h",
         "vma.h",
@@ -25,6 +26,7 @@ cc_library(
         "storage_buffer.cpp",
         "command_buffer.cpp",
         "uniform_buffer.cpp",
+        "indirect_draw_buffer.cpp",
         "pipeline.cpp",
         "texture.cpp",
         "shader_program.cpp",
