fix: rhi buffer api

--- a/src/rhi/BUILD.bazel
+++ b/src/rhi/BUILD.bazel
@@ -7,11 +7,8 @@ cc_library(
         "context.h",
         "device.h",
         "surface.h",
-        "index_buffer.h",
-        "storage_buffer.h",
+        "buffer.h",
         "command_buffer.h",
-        "uniform_buffer.h",
-        "indirect_draw_buffer.h",
         "pipeline.h",
         "texture.h",
         "vma.h",
@@ -22,11 +19,8 @@ cc_library(
         "context.cpp",
         "device.cpp",
         "surface.cpp",
-        "index_buffer.cpp",
-        "storage_buffer.cpp",
+        "buffer.cpp",
         "command_buffer.cpp",
-        "uniform_buffer.cpp",
-        "indirect_draw_buffer.cpp",
         "pipeline.cpp",
         "texture.cpp",
         "shader_program.cpp",
